--- a/po/hi.po
+++ b/po/hi.po
@@ -611,14 +611,17 @@ msgstr ""
 msgid "Externals Install Directory"
 msgstr ""
 
+#, fuzzy
+msgid "Clear"
+msgstr "सूची साफ करें"
+
 msgid "Choose Pd documents directory:"
 msgstr ""
 
-#, tcl-format
-msgid "Couldn't create Pd documents directory: %s"
+msgid "Install externals to directory:"
 msgstr ""
 
-msgid "Install externals to directory:"
+msgid "Add a new path"
 msgstr ""
 
 msgid "Add new library"
@@ -784,6 +787,10 @@ msgid ""
 "%s\n"
 "\n"
 "Choose a new location?"
+msgstr ""
+
+#, tcl-format
+msgid "Couldn't create Pd documents directory: %s\n"
 msgstr ""
 
 #, fuzzy
