--- a/po/hu.po
+++ b/po/hu.po
@@ -594,14 +594,17 @@ msgstr ""
 msgid "Externals Install Directory"
 msgstr ""
 
+#, fuzzy
+msgid "Clear"
+msgstr "Menüt ürít"
+
 msgid "Choose Pd documents directory:"
 msgstr ""
 
-#, tcl-format
-msgid "Couldn't create Pd documents directory: %s"
+msgid "Install externals to directory:"
 msgstr ""
 
-msgid "Install externals to directory:"
+msgid "Add a new path"
 msgstr ""
 
 msgid "Add new library"
@@ -767,6 +770,10 @@ msgid ""
 "%s\n"
 "\n"
 "Choose a new location?"
+msgstr ""
+
+#, tcl-format
+msgid "Couldn't create Pd documents directory: %s\n"
 msgstr ""
 
 msgid "About Pd"
