--- a/po/template.pot
+++ b/po/template.pot
@@ -564,14 +564,16 @@ msgstr ""
 msgid "Externals Install Directory"
 msgstr ""
 
+msgid "Clear"
+msgstr ""
+
 msgid "Choose Pd documents directory:"
 msgstr ""
 
-#, tcl-format
-msgid "Couldn't create Pd documents directory: %s"
+msgid "Install externals to directory:"
 msgstr ""
 
-msgid "Install externals to directory:"
+msgid "Add a new path"
 msgstr ""
 
 msgid "Add new library"
@@ -735,6 +737,10 @@ msgid ""
 "%s\n"
 "\n"
 "Choose a new location?"
+msgstr ""
+
+#, tcl-format
+msgid "Couldn't create Pd documents directory: %s\n"
 msgstr ""
 
 msgid "About Pd"
