docsdir: removed 'Welcome to Pd' greeting

--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,8 @@
 # Federico Camara Halac <camarafede@gmail.com>, 2017.
 #
 msgid ""
-msgstr "Project-Id-Version: Pure Data 0.48.0\n"
+msgstr ""
+"Project-Id-Version: Pure Data 0.48.0\n"
 "Report-Msgid-Bugs-To: pd-dev@iem.at\n"
 "PO-Revision-Date: 2017-07-20 21:14-0400\n"
 "Last-Translator: Federico Camara Halac <camarafede@gmail.com>\n"
@@ -155,7 +156,9 @@ msgid "no Pd settings to erase"
 msgstr "No hay configuraciones para borrar"
 
 msgid "skipping loading preferences... Pd seems to have crashed on startup."
-msgstr "Altura Log:skipping loading preferences... Pd seems to have crashed on startup."
+msgstr ""
+"Altura Log:skipping loading preferences... Pd seems to have crashed on "
+"startup."
 
 msgid "(re-save preferences to reinstate them)"
 msgstr "(click en Guardar Preferencias para reestablecerlas)"
@@ -281,7 +284,8 @@ msgid "Save All Settings"
 msgstr "Guardar Configuraciones"
 
 msgid "WARNING: unknown graphme flags received in pdtk_canvas_dialog"
-msgstr "ADVERTENCIA: banderas graphme desconocidas recibidas en pdtk_canvas_dialog"
+msgstr ""
+"ADVERTENCIA: banderas graphme desconocidas recibidas en pdtk_canvas_dialog"
 
 msgid "Canvas Properties"
 msgstr "Propiedades de Canvas"
@@ -616,7 +620,8 @@ msgstr "[deken]: version instalada [%1$s] == %2$s...salteando!"
 
 #, tcl-format
 msgid "[deken] deken-plugin.tcl (Pd externals search) loaded from %s."
-msgstr "[deken] deken-plugin.tcl (Búsqueda de externals para Pd) cargado de %s."
+msgstr ""
+"[deken] deken-plugin.tcl (Búsqueda de externals para Pd) cargado de %s."
 
 #, tcl-format
 msgid "[deken] Platform detected: %s"
@@ -629,7 +634,9 @@ msgid "Search"
 msgstr "Buscar"
 
 msgid "To get a list of all available externals, try an empty search."
-msgstr "Para ver una lista de todos los externos disponibles, prueba una búsqueda vacía."
+msgstr ""
+"Para ver una lista de todos los externos disponibles, prueba una búsqueda "
+"vacía."
 
 msgid "Find externals"
 msgstr "Buscar Externos"
@@ -648,10 +655,13 @@ msgid "Unable to perform search. Are you online?"
 msgstr "La búsqueda no pudo ser realizada. ¿Está usted online?"
 
 msgid "No matching externals found. Try using the full name e.g. 'freeverb'."
-msgstr "No se han encontrado externos con ese nombre. Prueba usando el nombre completo, por ejemplo: 'freeverb'."
+msgstr ""
+"No se han encontrado externos con ese nombre. Prueba usando el nombre "
+"completo, por ejemplo: 'freeverb'."
 
 msgid "Please select a (writable) installation directory!"
-msgstr "Por favor, seleccione un directorio de instalación con permisos de escritura!"
+msgstr ""
+"Por favor, seleccione un directorio de instalación con permisos de escritura!"
 
 #, tcl-format
 msgid "Install %s to %s?"
@@ -662,7 +672,8 @@ msgid ""
 "Commencing downloading of:\n"
 "%1$s\n"
 "Into %2$s..."
-msgstr "Comenzando descarga de:\n"
+msgstr ""
+"Comenzando descarga de:\n"
 "%1$s\n"
 "En %2$s..."
 
@@ -721,21 +732,19 @@ msgstr "Subido por %1$s @ %2$s"
 
 #, tcl-format
 msgid ""
-"Welcome to Pure Data!\n"
-"\n"
 "Do you want Pd to create a documents directory for patches and external "
 "libraries?\n"
 "\n"
 "Location: %s\n"
 "\n"
 "You can change or disable this later in the Path preferences."
-msgstr "Bienvenido a Pure Data!\n"
-"\n"
+msgstr ""
 "¿Desea que Pd genere un directorio para parches y librerias de externos?\n"
 "\n"
 "Ubicacion: %s\n"
 "\n"
-"Puede cambiar o desactivar esta funcion luego desde las configuraciones de Ruta."
+"Puede cambiar o desactivar esta funcion luego desde las configuraciones de "
+"Ruta."
 
 #, tcl-format
 msgid ""
@@ -744,7 +753,8 @@ msgid ""
 "%s\n"
 "\n"
 "Choose a new location?"
-msgstr "No se ha podido encontrar el directorio de documentos de Pd:\n"
+msgstr ""
+"No se ha podido encontrar el directorio de documentos de Pd:\n"
 "\n"
 "%s\n"
 "\n"
@@ -896,7 +906,8 @@ msgstr "Borrar Menu"
 msgid ""
 "Delete all preferences?\n"
 "(takes effect when Pd is restarted)"
-msgstr "¿Desea eliminar todas las preferencias?\n"
+msgstr ""
+"¿Desea eliminar todas las preferencias?\n"
 "Tomara efecto cuando Pd reinicie."
 
 msgid "Path..."
