--- a/po/el.po
+++ b/po/el.po
@@ -892,9 +892,6 @@ msgstr "Αναίρεση"
 msgid "Redo"
 msgstr "Ακύρωση Αναίρεσης"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Νέο"
 
@@ -986,6 +983,9 @@ msgstr "Εγχειρίδιο HTML..."
 msgid "Browser..."
 msgstr "Πλοήγηση..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1017,6 +1017,10 @@ msgstr "Ρυθμίσεις MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Γονεϊκό Παράθυρο"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Καμπύλη Bezier"
 
 #, fuzzy
 msgid "Save All Preferences"
