--- a/po/en_ca.po
+++ b/po/en_ca.po
@@ -856,9 +856,6 @@ msgstr ""
 msgid "Redo"
 msgstr ""
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr ""
 
@@ -946,6 +943,9 @@ msgstr ""
 msgid "Browser..."
 msgstr ""
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -974,6 +974,10 @@ msgstr ""
 
 msgid "Zoom New Windows"
 msgstr ""
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Béziercurve"
 
 msgid "Save All Preferences"
 msgstr ""
