--- a/po/eu.po
+++ b/po/eu.po
@@ -920,9 +920,6 @@ msgstr "Desegin"
 msgid "Redo"
 msgstr "Berregin"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Berria"
 
@@ -1020,6 +1017,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Arakatu..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1052,6 +1052,10 @@ msgstr "MIDI Ezarpenak"
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Leihoa"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Bezier-en kurba"
 
 #, fuzzy
 msgid "Save All Preferences"
