--- a/po/hu.po
+++ b/po/hu.po
@@ -893,9 +893,6 @@ msgstr "Mégsem!"
 msgid "Redo"
 msgstr "Mégis!"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Új"
 
@@ -986,6 +983,9 @@ msgstr "HTML kézikönyv..."
 msgid "Browser..."
 msgstr "Beépített böngésző..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1017,6 +1017,10 @@ msgstr "MIDI beállítások..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Szülő ablak"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Bezier görbe"
 
 #, fuzzy
 msgid "Save All Preferences"
