--- a/po/az.po
+++ b/po/az.po
@@ -918,9 +918,6 @@ msgstr "Uqanda"
 msgid "Redo"
 msgstr "Səbəb"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Yeni"
 
@@ -1021,6 +1018,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Gəz..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1051,6 +1051,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Fayl Yolla"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
