--- a/po/be.po
+++ b/po/be.po
@@ -917,9 +917,6 @@ msgstr "Уганда"
 msgid "Redo"
 msgstr "Чырвоны"
 
-msgid "List of objects..."
-msgstr ""
-
 #, fuzzy
 msgid "New"
 msgstr "_Новы"
@@ -1022,6 +1019,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Агляд.."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1052,6 +1052,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Акно дасылкі"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
