--- a/po/bg.po
+++ b/po/bg.po
@@ -919,9 +919,6 @@ msgstr "Уганда"
 msgid "Redo"
 msgstr "Червено:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Ново"
 
@@ -1022,6 +1019,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Разглеждане..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1052,6 +1052,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Прозореца за изпращане на файлове"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
