--- a/po/he.po
+++ b/po/he.po
@@ -903,9 +903,6 @@ msgstr ""
 msgid "Redo"
 msgstr "אדום:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr ""
 
@@ -1004,6 +1001,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "דפדף..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1034,6 +1034,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "חלון ראשי"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
