--- a/po/pa.po
+++ b/po/pa.po
@@ -918,9 +918,6 @@ msgstr "ਯੂਗਾਂਡਾ"
 msgid "Redo"
 msgstr "ਲਾਲ:"
 
-msgid "List of objects..."
-msgstr ""
-
 #, fuzzy
 msgid "New"
 msgstr "ਨਵਾਂ(_N)"
@@ -1021,6 +1018,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "ਝਲਕ..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1051,6 +1051,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "ਭੇਜਣ ਝਰੋਖਾ"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
