--- a/po/pt_br.po
+++ b/po/pt_br.po
@@ -916,9 +916,6 @@ msgstr "Desfazer"
 msgid "Redo"
 msgstr "Refazer"
 
-msgid "List of objects..."
-msgstr "Lista de objetos..."
-
 msgid "New"
 msgstr "Novo"
 
@@ -1006,6 +1003,9 @@ msgstr "Manual em HTML..."
 msgid "Browser..."
 msgstr "Navegador..."
 
+msgid "List of objects..."
+msgstr "Lista de objetos..."
+
 msgid "puredata.info"
 msgstr "puredata.info"
 
@@ -1036,6 +1036,10 @@ msgstr "Configurações de MIDI..."
 
 msgid "Zoom New Windows"
 msgstr "Amplicar Zoom em Novas Janelas"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva de Bezier"
 
 msgid "Save All Preferences"
 msgstr "Salvar Todas as Preferências"
