--- a/po/pt_pt.po
+++ b/po/pt_pt.po
@@ -887,9 +887,6 @@ msgstr "Anular"
 msgid "Redo"
 msgstr "Restaurar"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Novo"
 
@@ -980,6 +977,9 @@ msgstr "Manual HTML"
 msgid "Browser..."
 msgstr "Navegador"
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1011,6 +1011,10 @@ msgstr "Configuração MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Janela superior"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva de Bézier"
 
 #, fuzzy
 msgid "Save All Preferences"
