--- a/po/sq.po
+++ b/po/sq.po
@@ -918,9 +918,6 @@ msgstr "Uganda"
 msgid "Redo"
 msgstr "E kuqe:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "E re"
 
@@ -1021,6 +1018,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Shfleto..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1051,6 +1051,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Dritare dërgimesh"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
