--- a/po/template.pot
+++ b/po/template.pot
@@ -5,7 +5,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Pure Data 0.50.2\n"
+"Project-Id-Version: Pure Data 0.51.0\n"
 "Report-Msgid-Bugs-To: pd-dev@iem.at\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -856,9 +856,6 @@ msgstr ""
 msgid "Redo"
 msgstr ""
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr ""
 
@@ -946,6 +943,9 @@ msgstr ""
 msgid "Browser..."
 msgstr ""
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -973,6 +973,9 @@ msgid "MIDI..."
 msgstr ""
 
 msgid "Zoom New Windows"
+msgstr ""
+
+msgid "Bezier Cables"
 msgstr ""
 
 msgid "Save All Preferences"
