--- a/po/hi.po
+++ b/po/hi.po
@@ -939,9 +939,6 @@ msgstr "यूगांडा"
 msgid "Redo"
 msgstr "लाल:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "नया"
 
@@ -1042,6 +1039,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "ब्राउज़..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1078,6 +1078,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "भेजें विंडो"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
