--- a/po/it.po
+++ b/po/it.po
@@ -911,9 +911,6 @@ msgstr "Annulla"
 msgid "Redo"
 msgstr "Ripristina"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Nuovo File"
 
@@ -1004,6 +1001,9 @@ msgstr "Manuale HTML..."
 msgid "Browser..."
 msgstr ""
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1038,6 +1038,10 @@ msgstr "Settaggi MIDI..."
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Finestra parent"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Curva bezier"
 
 #, fuzzy
 msgid "Save All Preferences"
