--- a/po/af.po
+++ b/po/af.po
@@ -945,9 +945,6 @@ msgstr "Uganda "
 msgid "Redo"
 msgstr "Rede"
 
-msgid "List of objects..."
-msgstr ""
-
 #, fuzzy
 msgid "New"
 msgstr "Nuwe"
@@ -1051,6 +1048,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Blaai..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1087,6 +1087,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Description=Stuur Lêer"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
