--- a/po/az.po
+++ b/po/az.po
@@ -940,9 +940,6 @@ msgstr "Uqanda"
 msgid "Redo"
 msgstr "Səbəb"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Yeni"
 
@@ -1043,6 +1040,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Gəz..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1079,6 +1079,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Fayl Yolla"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
