--- a/po/bg.po
+++ b/po/bg.po
@@ -941,9 +941,6 @@ msgstr "Уганда"
 msgid "Redo"
 msgstr "Червено:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Ново"
 
@@ -1044,6 +1041,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Разглеждане..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1080,6 +1080,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Прозореца за изпращане на файлове"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
