--- a/po/eu.po
+++ b/po/eu.po
@@ -942,9 +942,6 @@ msgstr "Desegin"
 msgid "Redo"
 msgstr "Berregin"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Berria"
 
@@ -1042,6 +1039,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Arakatu..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1077,6 +1077,10 @@ msgstr "MIDI Ezarpenak"
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Leihoa"
+
+#, fuzzy
+msgid "Bezier Cables"
+msgstr "Bezier-en kurba"
 
 #, fuzzy
 msgid "Save All Preferences"
