--- a/po/pa.po
+++ b/po/pa.po
@@ -940,9 +940,6 @@ msgstr "ਯੂਗਾਂਡਾ"
 msgid "Redo"
 msgstr "ਲਾਲ:"
 
-msgid "List of objects..."
-msgstr ""
-
 #, fuzzy
 msgid "New"
 msgstr "ਨਵਾਂ(_N)"
@@ -1043,6 +1040,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "ਝਲਕ..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1079,6 +1079,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "ਭੇਜਣ ਝਰੋਖਾ"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
