--- a/po/sq.po
+++ b/po/sq.po
@@ -940,9 +940,6 @@ msgstr "Uganda"
 msgid "Redo"
 msgstr "E kuqe:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "E re"
 
@@ -1043,6 +1040,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Shfleto..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1079,6 +1079,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Dritare dërgimesh"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
