--- a/po/vi.po
+++ b/po/vi.po
@@ -940,9 +940,6 @@ msgstr "U-gan-đa"
 msgid "Redo"
 msgstr "Màu đỏ:"
 
-msgid "List of objects..."
-msgstr ""
-
 msgid "New"
 msgstr "Mới"
 
@@ -1043,6 +1040,9 @@ msgstr ""
 msgid "Browser..."
 msgstr "Duyệt..."
 
+msgid "List of objects..."
+msgstr ""
+
 msgid "puredata.info"
 msgstr ""
 
@@ -1079,6 +1079,9 @@ msgstr ""
 #, fuzzy
 msgid "Zoom New Windows"
 msgstr "Cửa sô Gởi"
+
+msgid "Bezier Cables"
+msgstr ""
 
 #, fuzzy
 msgid "Save All Preferences"
